<resources>
    <string name="app_name">测试App</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <!-- dialog -->
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="hint_msg">消息提示</string>

    <!-- 首页搜索 -->
    <string name="search">搜索</string>
    <string name="transitions_name">搜索</string>
    <string name="cancle">取消</string>
    <!-- 筛选 -->
    <string name="determine">确定</string>
    <string name="reset">重置</string>
    <!-- 职位栏 -->
    <string name="job_of_enterprise">企业职位</string>
    <string name="job_of_hunter">猎头职位</string>
    <string name="job_filtration">标题</string>
    <!-- 投递反馈 -->
    <string name="delivery_feedback">投递反馈</string>
    <string name="invitation_of_hr">HR邀请</string>
    <string name="contacts">通讯录</string>
    <string name="notice">消息通知</string>
    <!-- 首页 -->
    <string name="title_of_recommend">职位推荐</string>
    <string name="title_of_activity">热门活动</string>
    <string name="title_of_topic">热门话题</string>
    <string name="more_jobs">查看更多</string>
    <!-- 个人中心 -->
    <string name="user_name">吃西瓜不吐西瓜仔</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载</string>
    <string name="nomore_loading">没有了</string>
    <!--<string name="refreshing">正在刷新</string>-->
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
</resources>
