<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/x20"
    android:paddingTop="@dimen/x20"
    android:background="@android:color/white"
    android:weightSum="4">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/feedback_of_img"
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/x100"
            android:src="@mipmap/feedback"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y4"
            android:layout_below="@+id/feedback_of_img"
            android:textSize="@dimen/x26"
            android:text="@string/delivery_feedback"/>

        <TextView
            android:id="@+id/feedback_of_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginRight="@dimen/x30"
            android:layout_alignParentRight="true"
            android:background="@drawable/textview_circle"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/invitation_of_img"
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/x100"
            android:src="@mipmap/invitation"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y4"
            android:layout_below="@+id/invitation_of_img"
            android:textSize="@dimen/x26"
            android:text="@string/invitation_of_hr"
            android:id="@+id/textView2"/>

        <TextView
            android:id="@+id/invitation_of_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginRight="@dimen/x30"
            android:layout_alignParentRight="true"
            android:background="@drawable/textview_circle"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contacts_of_img"
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/x100"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/contacts"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contacts_of_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y4"
            android:text="@string/invitation_of_hr"
            android:textSize="@dimen/x26"/>

        <TextView
            android:id="@+id/contacts_of_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/x30"
            android:background="@drawable/textview_circle"
            android:gravity="center"
            android:text="1"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/notice_of_img"
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/x100"
            android:src="@mipmap/notice"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y4"
            android:layout_below="@+id/notice_of_img"
            android:textSize="@dimen/x26"
            android:text="@string/notice"/>

        <TextView
            android:id="@+id/notice_of_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_marginRight="@dimen/x30"
            android:layout_alignParentRight="true"
            android:background="@drawable/textview_circle"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>
</LinearLayout>
